Updated demo page meta description.

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,16 +7,16 @@
 
 <title>Komito Analytics Demo Page</title>
 <link rel="canonical" href="https://datamart.github.io/Komito/demo">
-<meta name="description" content="Komito Analytics demo page.">
+<meta name="description" content="See Komito Analytics in action!">
 
 <meta itemprop="name" content="Komito Analytics Demo Page">
 <meta itemprop="url" content="https://datamart.github.io/Komito/demo">
-<meta itemprop="description" content="Komito Analytics demo page.">
+<meta itemprop="description" content="See Komito Analytics in action!">
 <meta itemprop="image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
 <meta property="og:title" content="Komito Analytics Demo Page">
 <meta property="og:url" content="https://datamart.github.io/Komito/demo">
-<meta property="og:description" content="Komito Analytics demo page.">
+<meta property="og:description" content="See Komito Analytics in action!">
 <meta property="og:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 <meta property="og:type" content="website">
 
@@ -25,7 +25,7 @@
 <meta name="twitter:creator" content="@thedatamartinc">
 <meta name="twitter:title" content="Komito Analytics Demo Page">
 <meta name="twitter:url" content="https://datamart.github.io/Komito/demo">
-<meta name="twitter:description" content="Komito Analytics demo page.">
+<meta name="twitter:description" content="See Komito Analytics in action!">
 <meta name="twitter:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
@@ -55,7 +55,7 @@
                  href="../" >Overview</a></li>
           <li><a title="Step-by-step Komito Analytics integration instructions."
                  href="../integration/" >Integration</a></li>
-          <li><a title="Komito Analytics demo page."
+          <li><a title="See Komito Analytics in action!"
                  href="./" class="kmt-current-page">Demo</a></li>
           <li><a title="Get Komito Analytics Source Code."
                  href="//github.com/Datamart/Komito/tree/master"
@@ -66,7 +66,7 @@
     <div class="kmt-page-content">
       <div class="kmt-section">
         <h3>Komito Analytics Demo</h3>
-        <p>See how to use Komito Analytics.</p>
+        <p>See Komito Analytics in action!</p>
         <p class="info">This page runs a Komito in debug mode. Please open Console to view dispatched events and sent requests.</p>
 
         <div class="kmt-parameter">
