--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                  href="./" class="kmt-current-page">Overview</a></li>
           <li><a title="Step-by-step Komito Analytics integration instructions."
                  href="./integration/">Integration</a></li>
-          <li><a title="Komito Analytics demo page."
+          <li><a title="See Komito Analytics in action!"
                  href="./demo/">Demo</a></li>
           <li><a title="Get Komito Analytics Source Code."
                  href="//github.com/Datamart/Komito/tree/master"
