Forced HTTPS to all links.

--- a/demo/index.html
+++ b/demo/index.html
@@ -58,7 +58,7 @@
           <li><a title="See Komito Analytics in action!"
                  href="./" class="kmt-current-page">Demo</a></li>
           <li><a title="Get Komito Analytics Source Code."
-                 href="//github.com/Datamart/Komito/tree/master"
+                 href="https://github.com/Datamart/Komito/tree/master"
                 target="_blank">Get source code</a></li>
         </ul>
       </div>
@@ -108,12 +108,12 @@
                 If link is a Social Network, "Social" event will be dispatched too.</th>
               <td>
                 <ul>
-                  <li><a target="_blank" href="//dtm.io/">Datamart</a></li>
-                  <li><a target="_blank" href="//www.linkedin.com/company/datamartinc">LinkedIn</a></li>
-                  <li><a target="_blank" href="//www.facebook.com/datamartinc">Facebook</a></li>
-                  <li><a target="_blank" href="//plus.google.com/+ValentinP">Google+</a></li>
-                  <li><a target="_blank" href="//twitter.com/vpodk">Twitter</a></li>
-                  <li><a target="_blank" href="//analytics.blogspot.com/">Blogger</a></li>
+                  <li><a target="_blank" href="https://dtm.io/">Datamart</a></li>
+                  <li><a target="_blank" href="https://www.linkedin.com/company/datamartinc">LinkedIn</a></li>
+                  <li><a target="_blank" href="https://www.facebook.com/datamartinc">Facebook</a></li>
+                  <li><a target="_blank" href="https://plus.google.com/+ValentinP">Google+</a></li>
+                  <li><a target="_blank" href="https://twitter.com/vpodk">Twitter</a></li>
+                  <li><a target="_blank" href="https://analytics.blogspot.com/">Blogger</a></li>
                 </ul>
               </td>
             </tr>
@@ -129,11 +129,11 @@
               <td>
                 <ul>
                   <li>
-                    <a href="//dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf"
+                    <a href="https://dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf"
                        target="_blank">Datamart-WebAnalytics-CaseStudy.pdf</a>
                   </li>
                   <li>
-                    <a href="//dl.google.com/closure-compiler/compiler-latest.zip"
+                    <a href="https://dl.google.com/closure-compiler/compiler-latest.zip"
                        target="_blank">Google-Closure-Compiler.zip</a> (Other domain)
                   </li>
                 </ul>
@@ -228,18 +228,18 @@
                   <li>
                     <b>Twitter</b>
                     <script type="text/javascript"
-                            src="//platform.twitter.com/widgets.js"></script>
-                    <a href="//twitter.com/share" class="twitter-share-button"
+                            src="https://platform.twitter.com/widgets.js"></script>
+                    <a href="https://twitter.com/share" class="twitter-share-button"
                        data-lang="en">Tweet</a>
-                    <a href="//twitter.com/vpodk" class="twitter-follow-button"
+                    <a href="https://twitter.com/vpodk" class="twitter-follow-button"
                        data-show-count="false" data-lang="en">Follow @vpodk</a>
-                    <a href="//twitter.com/intent/tweet?text=Hello%20world"
+                    <a href="https://twitter.com/intent/tweet?text=Hello%20world"
                        target="_blank">Tweet</a>
                   </li>
                   <li>
                     <b>LinkedIn</b>
                     <script type="text/javascript"
-                            src="//platform.linkedin.com/in.js"></script>
+                            src="https://platform.linkedin.com/in.js"></script>
                     <script type="IN/Share" data-counter="right"></script>
                     <script type="IN/FollowCompany" data-id="6442972"
                             data-counter="right"></script>
@@ -247,7 +247,7 @@
                   <li>
                     <b>Facebook</b>
                     <script type="text/javascript" id="facebook-jssdk"
-                            src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
+                            src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
                     </script>
                     <div class="fb-like" data-href="https://datamart.github.io/Komito/"
                          data-layout="button" data-action="like" data-show-faces="false"
@@ -273,22 +273,22 @@
         <p><em>Still have a questions?&nbsp;</em>
         <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
         <i class="or">-&nbsp;OR&nbsp;-</i>
-        <a href="//github.com/Datamart/Komito/issues" target="_blank" class="button grayscale" title="Post issue">Post issue</a>
+        <a href="https://github.com/Datamart/Komito/issues" target="_blank" class="button grayscale" title="Post issue">Post issue</a>
         </p>
       </div>
     </div>
     <div class="kmt-page-footer">
-      <a href="//www.dtm.io" title="Datamart Inc."
+      <a href="https://www.dtm.io" title="Datamart Inc."
          class="dtm-logo"><svg xmlns="http://www.w3.org/2000/svg"
          width="33px" height="33px" viewBox="0 0 83 75"><path fill="#d61700" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill="#d61700" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill="#d61700" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill="#d61700" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
       <p>Komito Analytics is subject to the terms and conditions of
-        <a href="//www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
+        <a href="https://www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
            title="Apache License">Apache License 2.0</a>
         <br>
         <span itemprop="publisher" itemscope
               itemtype="http://schema.org/Organization">
           © <script>document.write((new Date).getFullYear())</script>
-          <a itemprop="url" href="//www.dtm.io" title="Datamart Inc."><span
+          <a itemprop="url" href="https://www.dtm.io" title="Datamart Inc."><span
              itemprop="name">Datamart Inc.</span></a>
           <meta itemprop="sameAs" content="https://plus.google.com/103753969968292534269">
           <meta itemprop="sameAs" content="https://www.linkedin.com/company/datamartinc">
@@ -341,5 +341,5 @@
   </script>
   <script>var _komito = {debugMode: 1};</script>
   <script src="../scripts/functions.js"></script>
-  <script src="//datamart.github.io/Komito/komito.js"></script>
+  <script src="https://datamart.github.io/Komito/komito.js"></script>
 </body></html>
