--- a/integration/index.html
+++ b/integration/index.html
@@ -58,7 +58,7 @@
           <li><a title="See Komito Analytics in action!"
                  href="../demo/">Demo</a></li>
           <li><a title="Get Komito Analytics Source Code."
-                 href="//github.com/Datamart/Komito/tree/master"
+                 href="https://github.com/Datamart/Komito/tree/master"
                  target="_blank">Get source code</a></li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
         <p>
           <b>1. </b>Adding <b>Komito Analytics</b> to a website is easy – just place this code below,
           ideally right before the closing <code>&lt;/body&gt;</code> tag:</p>
-        <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="//datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre></code>
+        <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="https://datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre></code>
         <p>2. Default <b>Komito Analytics</b> configuration:</p>
         <code><pre><span class="tag">&lt;script&gt;</span>
   <span class="kwd">var</span> _komito = _komito || {
@@ -293,17 +293,17 @@
       </div>
     </div>
     <div class="kmt-page-footer">
-      <a href="//www.dtm.io" title="Datamart Inc."
+      <a href="https://www.dtm.io" title="Datamart Inc."
          class="dtm-logo"><svg xmlns="http://www.w3.org/2000/svg"
          width="33px" height="33px" viewBox="0 0 83 75"><path fill="#d61700" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill="#d61700" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill="#d61700" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill="#d61700" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
       <p>Komito Analytics is subject to the terms and conditions of
-        <a href="//www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
+        <a href="https://www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
            title="Apache License">Apache License 2.0</a>
         <br>
         <span itemprop="publisher" itemscope
               itemtype="http://schema.org/Organization">
           © <script>document.write((new Date).getFullYear())</script>
-          <a itemprop="url" href="//www.dtm.io" title="Datamart Inc."><span
+          <a itemprop="url" href="https://www.dtm.io" title="Datamart Inc."><span
              itemprop="name">Datamart Inc.</span></a>
           <meta itemprop="sameAs" content="https://plus.google.com/103753969968292534269">
           <meta itemprop="sameAs" content="https://www.linkedin.com/company/datamartinc">
@@ -321,5 +321,5 @@
   ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
   </script>
   <script src="../scripts/functions.js"></script>
-  <script src="//datamart.github.io/Komito/komito.js"></script>
+  <script src="https://datamart.github.io/Komito/komito.js"></script>
 </body></html>
