--- a/demo/index.html
+++ b/demo/index.html
@@ -108,7 +108,7 @@
                 If link is a Social Network, "Social" event will be dispatched too.</th>
               <td>
                 <ul>
-                  <li><a target="_blank" href="https://dtm.io/">Datamart</a></li>
+                  <li><a target="_blank" href="https://www.dtm.io/">Datamart</a></li>
                   <li><a target="_blank" href="https://www.linkedin.com/company/datamartinc">LinkedIn</a></li>
                   <li><a target="_blank" href="https://www.facebook.com/datamartinc">Facebook</a></li>
                   <li><a target="_blank" href="https://plus.google.com/+ValentinP">Google+</a></li>
@@ -129,7 +129,7 @@
               <td>
                 <ul>
                   <li>
-                    <a href="https://dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf"
+                    <a href="https://www.dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf"
                        target="_blank">Datamart-WebAnalytics-CaseStudy.pdf</a>
                   </li>
                   <li>
@@ -317,6 +317,7 @@
   function __utmTrackEvent(category, action, opt_label, opt_value, opt_page) {
     console.log('Urchin', '__utmTrackEvent:', arguments);
   }
+
   // Emulating ClickTale
   function ClickTaleEvent(event) {
     console.log('ClickTaleEvent:', event);
