Code cleanup (Lighthouse).

--- a/integration/index.html
+++ b/integration/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
-      itemtype="http://schema.org/WebPage">
+      itemtype="http://schema.org/WebPage" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
 
 <title>Komito Analytics Integration Instructions</title>
 <link rel="canonical" href="https://datamart.github.io/Komito/integration">
@@ -302,7 +302,7 @@
         <br>
         <span itemprop="publisher" itemscope
               itemtype="http://schema.org/Organization">
-          © <script>document.write((new Date).getFullYear())</script>
+          © <script>document.currentScript.outerText=(new Date).getFullYear()</script>
           <a itemprop="url" href="https://www.dtm.io" title="Datamart Inc."><span
              itemprop="name">Datamart Inc.</span></a>
           <meta itemprop="sameAs" content="https://plus.google.com/103753969968292534269">
