Code cleanup (Lighthouse).

--- a/demo/index.html
+++ b/demo/index.html
@@ -57,9 +57,9 @@
                  href="../integration/" >Integration</a></li>
           <li><a title="See Komito Analytics in action!"
                  href="./" class="kmt-current-page">Demo</a></li>
-          <li><a title="Get Komito Analytics Source Code."
-                 href="https://github.com/Datamart/Komito/tree/master"
-                target="_blank">Get source code</a></li>
+          <li><a href="https://github.com/Datamart/Komito/tree/master"
+                 title="Get Komito Analytics Source Code."
+                 rel="nofollow">Get source code</a></li>
         </ul>
       </div>
     </div>
@@ -108,12 +108,12 @@
                 If link is a Social Network, "Social" event will be dispatched too.</th>
               <td>
                 <ul>
-                  <li><a target="_blank" href="https://www.dtm.io/">Datamart</a></li>
-                  <li><a target="_blank" href="https://www.linkedin.com/company/datamartinc">LinkedIn</a></li>
-                  <li><a target="_blank" href="https://www.facebook.com/datamartinc">Facebook</a></li>
-                  <li><a target="_blank" href="https://plus.google.com/+ValentinP">Google+</a></li>
-                  <li><a target="_blank" href="https://twitter.com/vpodk">Twitter</a></li>
-                  <li><a target="_blank" href="https://analytics.blogspot.com/">Blogger</a></li>
+                  <li><a href="https://www.dtm.io/">Datamart</a></li>
+                  <li><a href="https://www.linkedin.com/company/datamartinc" rel="nofollow">LinkedIn</a></li>
+                  <li><a href="https://www.facebook.com/datamartinc" rel="nofollow">Facebook</a></li>
+                  <li><a href="https://plus.google.com/+vpodk" rel="nofollow">Google+</a></li>
+                  <li><a href="https://twitter.com/vpodk" rel="nofollow">Twitter</a></li>
+                  <li><a href="https://analytics.blogspot.com/" rel="nofollow">Blogger</a></li>
                 </ul>
               </td>
             </tr>
@@ -130,11 +130,11 @@
                 <ul>
                   <li>
                     <a href="https://www.dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf"
-                       target="_blank">Datamart-WebAnalytics-CaseStudy.pdf</a>
+                       rel="nofollow">Datamart-WebAnalytics-CaseStudy.pdf</a>
                   </li>
                   <li>
                     <a href="https://dl.google.com/closure-compiler/compiler-latest.zip"
-                       target="_blank">Google-Closure-Compiler.zip</a> (Other domain)
+                       rel="nofollow">Google-Closure-Compiler.zip</a> (Other domain)
                   </li>
                 </ul>
               </td>
@@ -230,11 +230,11 @@
                     <script type="text/javascript"
                             src="https://platform.twitter.com/widgets.js"></script>
                     <a href="https://twitter.com/share" class="twitter-share-button"
-                       data-lang="en">Tweet</a>
+                       data-lang="en" rel="nofollow">Tweet</a>
                     <a href="https://twitter.com/vpodk" class="twitter-follow-button"
-                       data-show-count="false" data-lang="en">Follow @vpodk</a>
+                       data-show-count="false" data-lang="en" rel="nofollow">Follow @vpodk</a>
                     <a href="https://twitter.com/intent/tweet?text=Hello%20world"
-                       target="_blank">Tweet</a>
+                       target="_blank" rel="nofollow,noopener">Tweet</a>
                   </li>
                   <li>
                     <b>LinkedIn</b>
@@ -273,7 +273,7 @@
         <p><em>Still have a questions?&nbsp;</em>
         <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
         <i class="or">-&nbsp;OR&nbsp;-</i>
-        <a href="https://github.com/Datamart/Komito/issues" target="_blank" class="button grayscale" title="Post issue">Post issue</a>
+        <a href="https://github.com/Datamart/Komito/issues" rel="nofollow" class="button grayscale" title="Post issue">Post issue</a>
         </p>
       </div>
     </div>
