--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
       itemtype="http://schema.org/WebPage" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"><link rel="manifest" href="../manifest.json">
 
 <title>Komito Analytics Demo Page</title>
 <link rel="canonical" href="https://datamart.github.io/Komito/demo">
