--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
+<link rel="manifest" href="./manifest.json">
 
 <title>Komito Analytics at a Glance</title>
 <link rel="canonical" href="https://datamart.github.io/Komito/">
