Updated integration instruction

--- a/integration/index.html
+++ b/integration/index.html
@@ -72,7 +72,7 @@
           <b>1. </b>Adding <b>Komito Analytics</b> to a website is easy – just place this code below,
           ideally right before the closing <code>&lt;/body&gt;</code> tag:</p>
         <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="https://datamart.github.io/Komito/komito.js" rel="nofollow">//datamart.github.io/Komito/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre></code>
-        <p>2. Default <b>Komito Analytics</b> configuration:</p>
+        <p>2. Default <b>Komito Analytics</b> configuration: (Put this code before main script.)</p>
         <code><pre><span class="tag">&lt;script&gt;</span>
   <span class="kwd">var</span> _komito = _komito || {
     <span class="str">'trackTwitter'</span>: 1,   <span class="com">// Tracks Twitter events if widget is presented on page.</span>
