Updated support email address.

--- a/demo/index.html
+++ b/demo/index.html
@@ -149,7 +149,7 @@
               <th>Clicking on links "CTA" event will be dispatched.</th>
               <td>
                 <ul>
-                  <li><a href="mailto:komito-support@dtm.io">mailto:komito-support@dtm.io</a></li>
+                  <li><a href="mailto:support@komito.net">mailto:support@komito.net</a></li>
                   <li><a href="mailto:hr@dtm.io?subject=Resume">mailto:hr@dtm.io?subject=Resume</a></li>
                   <li><a href="tel:+14157997500">tel:+14157997500</a></li>
                   <li><a href="sms:+14157997500">sms:+14157997500</a></li>
@@ -271,7 +271,7 @@
       </div>
       <div class="kmt-section extra">
         <p><em>Still have a questions?&nbsp;</em>
-        <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
+        <a href="mailto:support@komito.net" class="button" title="Ask Komito support team">Ask Komito support team</a>
         <i class="or">-&nbsp;OR&nbsp;-</i>
         <a href="https://github.com/Datamart/Komito/issues" rel="nofollow" class="button grayscale" title="Post issue">Post issue</a>
         </p>
