--- a/integration/index.html
+++ b/integration/index.html
@@ -288,7 +288,7 @@
       </div>
       <div class="kmt-section extra">
         <p>
-          <a href="mailto:komito-support@dtm.io" class="button"
+          <a href="mailto:support@komito.net" class="button"
              title="Ask Komito Analytics support team">Ask support team</a>
           <i class="or">-&nbsp;OR&nbsp;-</i>
           <a href="../demo/" class="button grayscale"
