Updated canonical URLs

--- a/integration/index.html
+++ b/integration/index.html
@@ -7,16 +7,16 @@
 <link rel="manifest" href="../manifest.json">
 
 <title>Komito Analytics Integration Instructions</title>
-<link rel="canonical" href="https://datamart.github.io/Komito/integration">
+<link rel="canonical" href="https://datamart.github.io/Komito/integration/">
 <meta name="description" content="Step-by-step Komito Analytics integration instructions.">
 
 <meta itemprop="name" content="Komito Analytics Integration Instructions">
-<meta itemprop="url" content="https://datamart.github.io/Komito/integration">
+<meta itemprop="url" content="https://datamart.github.io/Komito/integration/">
 <meta itemprop="description" content="Step-by-step Komito Analytics integration instructions.">
 <meta itemprop="image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
 <meta property="og:title" content="Komito Analytics Integration Instructions">
-<meta property="og:url" content="https://datamart.github.io/Komito/integration">
+<meta property="og:url" content="https://datamart.github.io/Komito/integration/">
 <meta property="og:description" content="Step-by-step Komito Analytics integration instructions.">
 <meta property="og:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 <meta property="og:type" content="website">
@@ -25,7 +25,7 @@
 <meta name="twitter:site" content="@thedatamartinc">
 <meta name="twitter:creator" content="@thedatamartinc">
 <meta name="twitter:title" content="Komito Analytics Integration Instructions">
-<meta name="twitter:url" content="https://datamart.github.io/Komito/integration">
+<meta name="twitter:url" content="https://datamart.github.io/Komito/integration/">
 <meta name="twitter:description" content="Step-by-step Komito Analytics integration instructions.">
 <meta name="twitter:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
