Added 'nonInteraction' events. Related to #22 and #24

--- a/integration/index.html
+++ b/integration/index.html
@@ -86,7 +86,8 @@
     <span class="str">'trackPrint'</span>: 1,     <span class="com">// Tracks page print actions.</span>
     <span class="str">'trackMedia'</span>: 1,     <span class="com">// Tracks HTML5 video, audio, Vimeo and YouTube players events.</span>
     <span class="str">'trackScroll'</span>: 1,    <span class="com">// Tracks scroll depth.</span>
-    <span class="str">'debugMode'</span>: 0       <span class="com">// Prints all requests to console.</span>
+    <span class="str">'debugMode'</span>: 0,      <span class="com">// Prints all requests to console.</span>
+    <span class="str">'nonInteraction'</span>: [<span class="str">'form'</span>, <span class="str">'print'</span>, <span class="str">'scroll'</span>, <span class="str">'video'</span>] <span class="com">// List of non interaction events.</span>
   };
 <span class="tag">&lt;/script&gt;</span></pre></code>
       </div>
