--- a/integration/index.html
+++ b/integration/index.html
@@ -272,6 +272,19 @@
             </tr>
           </table>
         </div>
+        <div class="kmt-parameter">
+          <h4>Non-interaction events</h4>
+          <table>
+            <tr>
+              <th><samp>nonInteraction</samp></th>
+              <td>
+              Setting list of non-interaction events for Google Analytics.
+              For more information, see <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/events#non-interaction_events">Event Tracking: Non-interaction events</a> and
+              <a href="https://support.google.com/analytics/answer/1033068#NonInteractionEvents">About Events: Non-Interaction Events</a>.
+              </td>
+            </tr>
+          </table>
+        </div>
       </div>
       <div class="kmt-section extra">
         <h3>Integration through Google Tag Manager</h3>
