Updated integration instruction.

--- a/integration/index.html
+++ b/integration/index.html
@@ -279,8 +279,8 @@
               <th><samp>nonInteraction</samp></th>
               <td>
               Sets the list of non-interaction events for Google Analytics.
-              For more information, see <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/events#non-interaction_events">Event Tracking: Non-interaction events</a> and
-              <a href="https://support.google.com/analytics/answer/1033068#NonInteractionEvents">About Events: Non-Interaction Events</a>.
+              For more information, see <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/events#non-interaction_events" rel="nofollow">Event Tracking: Non-interaction events</a> and
+              <a href="https://support.google.com/analytics/answer/1033068#NonInteractionEvents" rel="nofollow">About Events: Non-Interaction Events</a>.
               </td>
             </tr>
           </table>
