Updated links to komito.net domain

--- a/index.html
+++ b/index.html
@@ -7,39 +7,39 @@
 <link rel="manifest" href="./manifest.json">
 
 <title>Komito Analytics at a Glance</title>
-<link rel="canonical" href="https://datamart.github.io/Komito/">
+<link rel="canonical" href="https://komito.net">
 <meta name="description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
 
 <meta itemprop="name" content="Komito Analytics at a Glance">
-<meta itemprop="url" content="https://datamart.github.io/Komito/">
+<meta itemprop="url" content="https://komito.net">
 <meta itemprop="description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
-<meta itemprop="image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta itemprop="image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
 <meta property="og:title" content="Komito Analytics at a Glance">
-<meta property="og:url" content="https://datamart.github.io/Komito/">
+<meta property="og:url" content="https://komito.net">
 <meta property="og:description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
-<meta property="og:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta property="og:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 <meta property="og:type" content="website">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@thedatamartinc">
 <meta name="twitter:creator" content="@thedatamartinc">
 <meta name="twitter:title" content="Komito Analytics at a Glance">
-<meta name="twitter:url" content="https://datamart.github.io/Komito/">
+<meta name="twitter:url" content="https://komito.net">
 <meta name="twitter:description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
-<meta name="twitter:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta name="twitter:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="styles.css" rel="stylesheet">
-<link rel="prefetch prerender" href="https://datamart.github.io/Komito/integration/">
-<link rel="prefetch prerender" href="https://datamart.github.io/Komito/demo/">
+<link rel="prefetch prerender" href="https://komito.net/integration/">
+<link rel="prefetch prerender" href="https://komito.net/demo/">
 <link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
 </head>
 <body class="kmt-homepage">
   <div class="kmt-page">
     <div class="kmt-page-header">
       <div class="kmt-logo">
-        <a href="/Komito/" title="Komito Analytics"><svg version="1.1"
+        <a href="./" title="Komito Analytics"><svg version="1.1"
            xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
            height="45px" viewBox="0 0 45 45"><polygon fill="#d20"
            points="0,0 0,20.1 19.8,0"/><polygon fill="#f80"
@@ -198,9 +198,9 @@
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
 </script>
 <script src="./scripts/functions.js"></script>
-<script src="https://datamart.github.io/Komito/komito.js"></script>
+<script src="https://komito.net/komito.js"></script>
 </body></html>
